--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+body {
+  background: #333;
+}
+
 .App {
   .HomePage {
     display: flex;
@@ -69,6 +73,20 @@
     .homeMovieBar {
       flex: 1;
       background: #333;
+      .navbars {
+        background: #333;
+
+        .appName {
+          display: none;
+        }
+        ul {
+          .items {
+            input{
+              flex:1
+            }
+            }
+        }
+      }
     }
   }
 }
