--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+* {
+  scroll-behavior: smooth;
+}
+
 body {
   background: #333;
 }
@@ -75,18 +79,40 @@ body {
       background: #333;
       .navbars {
         background: #333;
-
+        
+        box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.8);
+        z-index: 1;
         .appName {
           display: none;
         }
         ul {
           .items {
-            input{
-              flex:1
+            input {
+              flex: 1;
             }
-            }
+          }
         }
       }
     }
   }
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
