--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  scroll-behavior: smooth;
+}
+
 body {
   background: #333;
 }
@@ -86,6 +90,8 @@ body {
 
 .App .HomePage .homeMovieBar .navbars {
   background: #333;
+  box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.8);
+  z-index: 1;
 }
 
 .App .HomePage .homeMovieBar .navbars .appName {
@@ -94,4 +100,24 @@ body {
 
 .App .HomePage .homeMovieBar .navbars ul .items input {
   flex: 1;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
